@@ -5,6 +5,9 @@ Add new items to top.
 2007-02-22 Kimmo
  BUG: [ 1664731 ] Margin and line numbers not separated
   Src/editlib: ccrystaltextview.cpp
+ BUG: [ 1664727 ] Empty file compare looks broken
+  Fix revision marks for scrachpads
+  Src/editlib: ccrystaltextview.cpp
 
 2007-02-21 Kimmo
  BUG: [ 1664727 ] Empty file compare looks broken
